[tool.poetry]
name = "reactions"
version = "0.1.0"
description = ""
authors = ["Simon StJG <Simon.StJG@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
